# game-engine

./: .gitignore  CMakeLists.txt  Game Engine.sln  Game Engine.vcxproj  Game Engine.vcxproj.filters  Makefile  README.md  main.c  main.cpp  tengine.cpp  tengine.hpp
src/: component.cpp  component.hpp  constants.h  ecs.cpp  ecs.hpp  fps_tracker.cpp  fps_tracker.hpp  main.cpp  tengine.cpp  tengine.hpp
src/component/: location.cpp  location.hpp
src/ecs/: ecs.cpp  ecs.hpp  entity.cpp  entity.hpp
src/ecs/component/: component_manager.hpp  i_component.cpp  i_component.hpp  sprite.hpp  transform.hpp
src/ecs/system/: component_manager.hpp  entity_manager.cpp  entity_manager.hpp  render_system.cpp  render_system.hpp  system.hpp
src/entity/: entity.cpp  entity.hpp
src/game_object/: game_object.cpp  game_object.hpp
src/math/: vec2.cpp  vec2.hpp
src/system/: component_manager.hpp  entity_manager.cpp  entity_manager.hpp
